# lct2024

./: .env  .gitignore  README.md  docker-compose-minio-standalone.yaml  docker-compose-nginx-only.yaml  docker-compose-nginx-standalone.yaml  docker-compose-pgadmin-standalone.yaml  docker-compose-redis-standalone.yaml  docker-compose.yaml  example.env  nx.json  package-lock.json  package.json
apps/HaCS_ml_analize/: .gitignore  analize_ds_1.ipynb  columns_info.json  incident_to_accident_times.json  moscow_weather_description.json  req.txt  try_get_dist.ipynb  useless_columns_by_count.json  word_abbreviations.md
apps/HaCS_ml_analize/..git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
apps/HaCS_ml_analize/analize/: analize_buildings.ipynb  analize_timeline_datasets.ipynb  weather_analize.ipynb
apps/HaCS_ml_analize/build_datasets/: build_anomaly_ts.ipynb  build_timeline_datasets.ipynb  make_full_adress_info.ipynb  make_full_odpu_dataset.ipynb
apps/HaCS_ml_back/: .gitignore  README.md  columns_info.json  constants.py  data_buildings_unom_ids_pairs.json  docker-compose.yaml  docker-compose.yml  docs.py  enumed_problems.json  main.py  req.txt  turn_on_of_heat_ordered.json  vars.py
apps/backend/: .env  docker-compose.yaml  localhost.env
apps/fastapi-celery/: Dockerfile  docker-compose.yaml  pyproject.toml  worker.yaml
apps/fastapi-celery/src/: main.py  worker.py
apps/frontend/: docker-compose.yaml  index.html  tsconfig.json  vite.config.ts
minio/: clear-minio.sh
minio/minio-data/: .root_password  .root_user
nginx/: nginx.conf
(+286 files in other folders)
