[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Isachenko Ivan <vanisachenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
poetry-dotenv = "^0.4.0"
openpyxl = "^3.1.3"
redis = "^5.0.5"
flower = "^2.0.1"
asgiref = "^3.8.1"
pullenti-wrapper = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
